[package]
name = "drive-pi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-graphics = "0.7.1"
embedded-hal = "0.2.7"
linux-embedded-hal = { version = "0.3.2", features = ["gpio_cdev"] }
ssd1306 = "0.7.1"
