[package]
name = "drive-pi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ssd1306 = { version = "0.7.1", optional = true }
embedded-graphics = "0.7.1"
piston_window = { version = "0.124.0", optional = true }
linux-embedded-hal = { version = "0.3.2", features = [
    "gpio_cdev",
], optional = true }
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.86"
toml = "0.5.9"
sys-mount = "1.5.1"

[features]
default = ["simulator"]
simulator = ["piston_window"]
pi = ["ssd1306", "linux-embedded-hal"]
