[package]
name = "drive-pi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = { version = "0.3", optional = true }
serde = { version = "1.0.145", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt"], optional = true }
gpio-cdev = { version = "0.5", features = ["async-tokio"] }
ssd1306 = { version = "0.7.1", optional = true }
embedded-graphics = "0.7.1"
piston_window = { version = "0.124.0", optional = true }
linux-embedded-hal = { version = "0.3.2", default_features = false, optional = true }
serde_json = "1.0.86"
toml = "0.5.9"
walkdir = "2.3.2"

[features]
default = ["pi"]
simulator = ["piston_window"]
pi = ["ssd1306", "linux-embedded-hal", "tokio", "futures"]
